--- a/style.css
+++ b/style.css
@@ -162,7 +162,7 @@ textarea {
     border: 2px solid #777;
     box-sizing: border-box;
     font-size: 1.25em;
-    width: 100%;
+    min-width: 100%;
     padding: 10px;
 }
 
