--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 /* Ändra bakgrund */
 
 .body {
-    background-image: url(bakgrund.png);
+    background-image: url(pannbiff.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -26,6 +26,10 @@ a:link,
 td {
     color: black;
     font-family: 'Montserrat', sans-serif;
+}
+
+.sida a {
+    color: aliceblue;
 }
 
 .header {
@@ -179,8 +183,8 @@ button {
     margin-top: 20px;
     height: 50px;
     width: 100%;
-    background: orange;
-    border-color: orange;
+    background: rgb(75, 129, 133);
+    border-color: rgb(75, 129, 133);
     border: rounded;
     color: white;
     font-size: 1.25em;
