--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ td {
     vertical-align: top;
 }
 
-#veckomatsedel::after {
+/*#veckomatsedel::after {
     content: "";
     background-color: #000;
     position: absolute;
@@ -114,7 +114,7 @@ td {
     top: 330px;
     left: 50%;
     display: block;
-}
+}*/
 
 .priser,
 .avhämtning,
