--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
 /* Ändra bakgrund */
 
 .body {
-    background-image: url(pannbiff.jpg);
+    background-image: url(../public/pannbiff.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -158,7 +158,7 @@ td {
     text-align: center;
     width: 35%;
     left: 50%;
-    top: 400px;
+    top: 500px;
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
