--- a/style.css
+++ b/style.css
@@ -193,3 +193,8 @@ button {
     border-radius: 4px;
     cursor: pointer;
 }
+
+label{
+    font-family: 'Montserrat', sans-serif ;
+    font: bolder;
+}
